For example `ViewUsage` elements are no longer rendered in _parts_ compartments.
- https://github.com/eclipse-syson/syson/issues/1981[#1981] [export] Fix an error during textual export where `Expose` elements with apostrophes in their name were not properly escaped.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/1694[#1694] [syson] Customize Elasticsearch indices to work with SysML.
SysON now uses its own indexing logic instead of the default one provided by Sirius Web.
This allows to limit the size of the indices, and ensure information stored in the indices are useful to perform cross-project search.
You can find more information on how to setup Elasticsearch, how elements are mapped to index documents, and how to query them in the documentation.
- https://github.com/eclipse-syson/syson/issues/1861[#1861] [publication] Split `SysONLibraryPublicationHandler` in two distinct classes so the publishing logic can be extended or re-used through the `ISysMLLibraryPublisher` API.
- https://github.com/eclipse-syson/syson/issues/1895[#1895] [export] Implement textual export of `StateUsage` and `StateDefinition`.
- https://github.com/eclipse-syson/syson/issues/1870[#1870] [diagrams] When dragging some `Element` into a diagram, hide its graphical node compartments unless it's an _interconnection_ compartment
- https://github.com/eclipse-syson/syson/issues/1943[#1943] [diagrams] Add _attributes_ and _doc_ compartments on `ConnectionDefinition` graphical nodes.
- https://github.com/eclipse-syson/syson/issues/1946[#1946] [diagrams] Add _actors_ compartment on `RequirementUsage` and `RequirementDefinition` graphical nodes.
- https://github.com/eclipse-syson/syson/issues/1947[#1947] [diagrams] Add _subjects_ as graphical nodes in addition to the existing the _subject_ compartment for `CaseUsages`, `CaseDefinitions`, `UseCaseUsage`, `UseCaseDefinitions`,  `RequirementsUsages`, `RequirementsDefinitions` and `SatisfyRequirementUsages`.